(sonarqube) improve code quality